# bucharest-hackaton

./: SC notes.txt
dynamic-staking-auto-compound/: Cargo.toml  README.md
dynamic-staking-auto-compound/interaction/: devnet.snippets.sh
dynamic-staking-auto-compound/meta/: Cargo.toml
dynamic-staking-auto-compound/meta/src/: main.rs
dynamic-staking-auto-compound/scenarios/: adder.scen.json
dynamic-staking-auto-compound/src/: lib.rs  owner.rs  private.rs  storage.rs  token.rs  types.rs  views.rs
dynamic-staking-auto-compound/tests/: dynamic-staking-auto-compound-tests.rs
dynamic-staking-auto-compound/wasm/: Cargo.toml
dynamic-staking-auto-compound/wasm/src/: lib.rs
refresh-rps-bot/: main.py
