[package]
name = "dynamic-staking-auto-compound"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.39.5"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.5"

[dependencies.multiversx-sc-modules]    
version = "0.39.5"